Invalidation working now. Updated READMEs. Still have some gacha.
